# REST-API-update-final

./: .env.example  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 04b01759847a_add_table_users.py  32aae156d89b_add_verify_for_user.py  4d8c275c6232_init.py  696fa11905ac_add_user_role.py
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16389  16392  16394  16400  16401  16405  16406  16407  16412  16413  16415  16417  2224  2579  2604  2606  2608  2608_fsm  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+9 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py  messages.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schema/: contact.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: verify_email.html
src/templates/: index.html
tests/: conftest.py  test_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
